crates/plotnik-lib/tests/05-typegen/definitions/error_uncaptured_output_with_captured_siblings.txt
A = [X: (identifier)]

Q = (program
  (A)
  (debugger_statement) @name
)
==== diagnostics ====
error: this match isn't captured, but its siblings are
 --> query.ptk:4:3
  |
4 |   (A)
  |   ^^^
  |
help: add `@name` to capture the output
